--- a/record.html
+++ b/record.html
@@ -51,6 +51,7 @@
             </tr>
           </tbody>
         </table>
+        <div>Patient information on this website is fictional.</div>
       </div>
       <div class="diagnoses container">
         <h1 class="heading">Diagnoses</h1>
