--- a/record.html
+++ b/record.html
@@ -231,20 +231,8 @@
     </div>
     <div class="footer border-top border-1">
       <div class="linkContainer">
-        <span class="link">Click here for more patient information</span>
-        <span
-          ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-arrow-right"
-            viewBox="0 0 16 16"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"
-            /></svg></span>
+        <span class="link">This website is a prototype for BartsX. All information is fictional.</span>
+       
       </div>
     </div>
     <script
