--- a/record.html
+++ b/record.html
@@ -31,7 +31,7 @@
           <tbody>
             <tr class="">
               <td>Name</td>
-              <td class="detailsHeader">John Smith</td>
+              <td class="detailsHeader">John</td>
             </tr>
             <tr>
               <td>Date of Birth</td>
@@ -43,7 +43,7 @@
             </tr>
             <tr>
               <td>Next of Kin</td>
-              <td class="detailsHeader">Adam Smith</td>
+              <td class="detailsHeader">Adam</td>
             </tr>
             <tr>
               <td>NoK Contact Number</td>
