--- a/record.html
+++ b/record.html
@@ -228,6 +228,35 @@
           </table>
         </div>
       </div>
+      <div class="admissions container">
+        <h1 class="heading">Hospital Admissions</h1>
+        <div class="tableContainer admissionsTable">
+          <table class="table ">
+            <thead>
+              <tr>
+                <th>Presentation</th>
+                <th>Hospital</th>
+                <th>Admission Date</th>
+                <th>Discharge Date</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Abdominal Pain</td>
+                <td>Royal London Hospital</td>
+                <td>01/11/2017</td>
+                <td>05/11/2017</td>
+              </tr>
+              <tr>
+                <td>NoF Fracture</td>
+                <td>Royal London Hospital</td>
+                <td>12/08/2013</td>
+                <td>20/08/2013</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
     <div class="footer border-top border-1">
       <div class="linkContainer">
