--- a/record.html
+++ b/record.html
@@ -39,7 +39,7 @@
             </tr>
             <tr>
               <td>NHS Number</td>
-              <td class="detailsHeader">123456789</td>
+              <td class="detailsHeader">xxxxxxxxx</td>
             </tr>
             <tr>
               <td>Next of Kin</td>
