--- a/record.html
+++ b/record.html
@@ -49,6 +49,10 @@
               <td>NoK Contact Number</td>
               <td class="detailsHeader">0123456789</td>
             </tr>
+            <tr>
+              <td>Weight</td>
+              <td class="detailsHeader">70kg</td>
+            </tr>
           </tbody>
         </table>
         <div>This patient is fictional.</div>
@@ -66,30 +70,22 @@
             </thead>
             <tbody>
               <tr>
-                <td>Epilepsy</td>
-                <td>04/2021</td>
+                <td>Type 1 Diabetes</td>
+                <td>04/2010</td>
                 <td class="active">Active</td>
               </tr>
-              <tr>
+              <!-- <tr>
                 <td>Hypertension</td>
                 <td>02/2012</td>
                 <td class="active">Active</td>
-              </tr>
+              </tr> -->
+   
               <tr>
-                <td>Type 2 Diabetes</td>
-                <td>10/2013</td>
-                <td class="active">Active</td>
-              </tr>
-              <tr>
-                <td>Colorectal Cancer</td>
+                <td>Depression</td>
                 <td>08/2015</td>
                 <td>Inactive</td>
               </tr>
-              <tr>
-                <td>Gallstones</td>
-                <td>11/2017</td>
-                <td>Inactive</td>
-              </tr>
+
             </tbody>
           </table>
         </div>
@@ -100,7 +96,7 @@
           <table class="table recordTable">
             <thead>
               <tr>
-                <th>Diagnosis</th>
+                <th>Drug</th>
                 <th>Dose</th>
                 <th>Date Started</th>
                 <th>Status</th>
@@ -109,14 +105,14 @@
             </thead>
             <tbody>
               <tr>
-                <td>Sodium Valproate</td>
-                <td>500mg BD</td>
-                <td>04/2021</td>
+                <td>Insulin Lispro</td>
+                <td>Adjusted after meals</td>
+                <td>04/2010</td>
                 <td class="active">Active</td>
                 <td>
                   <a
                     target="”_blank”"
-                    href="https://bnf.nice.org.uk/drug/sodium-valproate.html"
+                    href="https://bnf.nice.org.uk/drug/insulin-lispro.html"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -139,14 +135,14 @@
                 </td>
               </tr>
               <tr>
-                <td>Amlodipine</td>
-                <td>10mg OD</td>
-                <td>02/2012</td>
+                <td>Insulin Glargine</td>
+                <td>28units OD</td>
+                <td>04/2010</td>
                 <td class="active">Active</td>
                 <td>
                   <a
                     target="”_blank”"
-                    href="https://bnf.nice.org.uk/drug/amlodipine.html"
+                    href="https://bnf.nice.org.uk/drug/insulin-glargine.html"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -169,14 +165,14 @@
                 </td>
               </tr>
               <tr>
-                <td>Metformin</td>
-                <td>500mg BD</td>
-                <td>10/2013</td>
-                <td class="active">Active</td>
+                <td>Sertraline</td>
+                <td>50mg OD</td>
+                <td>08/2015</td>
+                <td>Inactive</td>
                 <td>
                   <a
                     target="”_blank”"
-                    href="https://bnf.nice.org.uk/drug/metformin-hydrochloride.html"
+                    href="https://bnf.nice.org.uk/drug/sertraline.html#indicationsAndDoses"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -242,16 +238,22 @@
             </thead>
             <tbody>
               <tr>
-                <td>Abdominal Pain</td>
+                <td>Severe hypoglycaemia</td>
                 <td>Royal London Hospital</td>
                 <td>01/11/2017</td>
                 <td>05/11/2017</td>
               </tr>
               <tr>
-                <td>NoF Fracture</td>
+                <td>Severe hypoglycaemia</td>
                 <td>Royal London Hospital</td>
-                <td>12/08/2013</td>
-                <td>20/08/2013</td>
+                <td>03/05/2015</td>
+                <td>13/05/2015</td>
+              </tr>
+              <tr>
+                <td>Diabetic Ketoacidosis</td>
+                <td>Royal London Hospital</td>
+                <td>12/04/2010</td>
+                <td>25/04/2010</td>
               </tr>
             </tbody>
           </table>
